--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "note-appreact-redux-crud_firebaseapp",
+  "name": "note-appreact-redux-crud_firebaseapp_auth",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
@@ -14,6 +14,7 @@
     "react-dom": "^17.0.2",
     "react-redux": "5.1.1",
     "react-redux-firebase": "2.2.*",
+    "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
     "redux": "^4.1.0",
     "redux-firestore": "0.10.0",
